--- a/style.css
+++ b/style.css
@@ -82,6 +82,7 @@ h5:hover .time{
     width: 100%;
     display: flex;
     justify-content: center;
+    align-content: center;
     margin-top: 30px;
     
 }
@@ -98,10 +99,9 @@ h5:hover .time{
     border: 2px solid rgb(102, 99, 99) ;
     padding-left: 15px;
     display: flex;
+    justify-content: center;
     align-content: center;
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.15);
-
-    /* box-shadow: 5px 5px 5px 5px rgb(238, 237, 237); */
 } 
 .players img{
     width:300px;
@@ -236,7 +236,6 @@ h3{
     }
     .players-profile{
         grid-template-columns: repeat(1, 1fr);
-        margin-left: 300px;
     }
     .players{
         flex-direction: column;
